# LearnOpenUSD

./: .buildinfo  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  usdview-install-instructions.html  why-openusd-developer-certification.html
_images/: ActiveInactive_Definition.webm  ActiveInactive_Inactive.webm  ActiveInactive_Python.webm  CustomAttribute_Python.webm  DefaultPrim_Definition.webm  DefaultPrim_Python.webm  Kind_Component.webm  Kind_Definition.webm  Kind_Python.webm  Metadata_Definition.webm  Metadata_Python.webm  Metadata_UseCase.webm  Metadata_vsAttributes.webm  Path_Python.webm  References_Definition.webm  References_Python.webm  Schema_Definition.webm  Schema_Main.webm  Schema_UsdGeom.webm  Schema_UsdLux.webm  Schema_UsdPhysics.webm  Specifiers_Class.webm  Specifiers_Def.webm  Specifiers_Over.webm  Specifiers_Python.webm  StrengthOrdering_Definition.webm  TimeCodeTimeSample_Definition.webm  TimeCodeTimeSample_Python.webm  ValueResolution_Defintion.webm  asset-structure-copy-activities.webm  copy-activities.webm  data-exchange-copy-activities.webm  layer_Definition.webm  layer_Python.webm  layer_USDvsPhotoshop.webm
_sources/: index.md.txt  usdview-install-instructions.md.txt  why-openusd-developer-certification.md.txt
asset-modularity-instancing/: index.html  instancing-faq.html  refining-point-instances.html  setup.html  what-is-instancing.html
asset-structure/: index.html  setup.html
beyond-basics/: active-inactive-prims.html  (+7 more)
(+611 files in other folders)
